--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "illuminate/support": "4.2.*",
         "illuminate/database": "4.2.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-0": {
             "ThibaudDauce\\PostgresqlSchema": "src/"
