--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "illuminate/database": "4.2.*"
     },
     "require-dev": {
+        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0"
     },
     "autoload": {
