--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.2.*",
-        "illuminate/database": "5.2.*"
+        "illuminate/support": ">=5.3",
+        "illuminate/database": ">=5.2"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~5.0"
     },
     "autoload": {
         "psr-4": {
