--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,5 @@
             "jumper423\\LaravelDataBase\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
