--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "^5.3",
-        "illuminate/database": "^5.2"
+        "illuminate/support": "~5.3",
+        "illuminate/database": "~5.2"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
